RESOLVED FIXED 110149
[Qt] Flash objects won't load until scrolling page
https://bugs.webkit.org/show_bug.cgi?id=110149
Summary [Qt] Flash objects won't load until scrolling page
David Rosca
Reported 2013-02-18 13:04:00 PST
Flash objects on pages won't load until page is scrolled or zoomed. Before the flash object is actually shown in the correct place, top left rectangle of page appears in top left corner of window as you can see from the screenshot. https://dl.dropbox.com/u/42835431/qtwebkit23-flashissue.png Just for the record: Adobe Flash 64bit 11,2,202,236
Attachments
Patch (1.57 KB, patch)
2013-02-26 04:50 PST, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2013-02-24 05:54:48 PST
This is possible a regression of the fix for bug 101836, commit r134222.
David Rosca
Comment 2 2013-02-24 13:39:22 PST
I can confirm that reverting r134222 fixes this issue. I also don't have any issues with size of flash video on thatguywiththeglasses.com as mentioned in bug 101836.
Allan Sandfeld Jensen
Comment 3 2013-02-26 04:47:00 PST
I am not able to reproduce the issue from bug 101836 anymore either. So perhaps the another issue was solved in the meantime.
Allan Sandfeld Jensen
Comment 4 2013-02-26 04:50:16 PST
WebKit Review Bot
Comment 5 2013-02-27 08:20:09 PST
Comment on attachment 190260 [details] Patch Clearing flags on attachment: 190260 Committed r144191: <http://trac.webkit.org/changeset/144191>
WebKit Review Bot
Comment 6 2013-02-27 08:20:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.