Source/WebCore/plugins/PluginPackage.cpp
@@ -206,9 +206,7 @@ void PluginPackage::determineQuirks(const String& mimeType)
         }
 
 #if PLATFORM(QT)
-        // Flash will crash on repeated calls to SetWindow in windowed mode.
-        // Defer the setWindow, so we don't set it to the wrong size too early.
-        m_quirks.add(PluginQuirkDeferFirstSetWindowCall);
+        // Flash will crash on repeated calls to SetWindow in windowed mode
         m_quirks.add(PluginQuirkDontCallSetWindowMoreThanOnce);
 #endif
 
